--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h2>Hello World, we are software developers!</h2>
+    <div id="nav-bar-div">
+      
+        <header id="header">
+           <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" id="header-img" alt="see">
+          <nav id="nav-bar" >
+            <h4 class="nav-link" ><a href="https://product-landing-page.freecodecamp.rocks/#features" > Features </a></h4>
+
+            <h4 class="nav-link"><a href="https://product-landing-page.freecodecamp.rocks/#how-it-works">How its Works  </a> </h4>
+            <h4 class="nav-link"> <a href="https://product-landing-page.freecodecamp.rocks/#pricing"> Pricing</a> </h4>
+          </nav>
+
+        </header>
+
+        <video id="video" >
+
+        </video>
+
+    </div>
+
+
+<div id="divForm">
+  <form id="form">
+    <input type="email" id="email" placeholder="Enter Your Email Address">
+    <button type="submit" id="submit" action="https://www.freecodecamp.com/email-submit">Get Started</button>
+  </form>
+
+</div>
+
+   
     <script  src="js/index.js"></script>
   </body>
 </html>
