--- a/index.html
+++ b/index.html
@@ -12,17 +12,24 @@
     <div id="nav-bar-div">
       
         <header id="header">
-           <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" id="header-img" alt="see">
+          <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" id="header-img" alt="see">
           <nav id="nav-bar" >
-            <h4 class="nav-link" ><a href="https://product-landing-page.freecodecamp.rocks/#features" > Features </a></h4>
+          <div id="feature">
+            <h4 class="nav-link" ><a href="https://product-landing-page.freecodecamp.rocks/" > Features </a></h4>
+          </div>
+          <div id="feature2">
+            <h4 class="nav-link"><a href="https://product-landing-page.freecodecamp.rocks/">How its Works  </a> </h4>
 
-            <h4 class="nav-link"><a href="https://product-landing-page.freecodecamp.rocks/#how-it-works">How its Works  </a> </h4>
-            <h4 class="nav-link"> <a href="https://product-landing-page.freecodecamp.rocks/#pricing"> Pricing</a> </h4>
+          </div>
+          <div id="feature3">
+            <h4 class="nav-link"> <a href="https://product-landing-page.freecodecamp.rocks/"> Pricing</a> </h4>
+          </div>
+          
           </nav>
-
+z
         </header>
 
-        <video id="video" >
+        <video id="video" src="https://youtu.be/y8Yv4pnO7qc">
 
         </video>
 
@@ -30,9 +37,9 @@
 
 
 <div id="divForm">
-  <form id="form">
-    <input type="email" id="email" placeholder="Enter Your Email Address">
-    <button type="submit" id="submit" action="https://www.freecodecamp.com/email-submit">Get Started</button>
+  <form id="form" action="https://www.freecodecamp.com/email-submit">
+    <input type="email" name="email" id="email" placeholder="Enter Your Email Address">
+    <button type="submit" id="submit" >Get Started</button>
   </form>
 
 </div>
